[package]
name = "webpage-to-app"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A tool to convert webpages to native Windows applications"

[dependencies]
webview2-com = "0.33.0"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader"
]}
clap = { version = "4.3.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.71"
